* Added LLamaSharp package

--- a/FiatMedicaWPF/FiatMedicaWPF.csproj
+++ b/FiatMedicaWPF/FiatMedicaWPF.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.25.0" />
+  </ItemGroup>
+
 </Project>
