--- a/FiatMedicaWPF/FiatMedicaWPF.csproj
+++ b/FiatMedicaWPF/FiatMedicaWPF.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LLamaSharp" Version="0.25.0" />
     <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.25.0" />
   </ItemGroup>
 
