Integrate RAG and PDF processing for patient context
Enhanced the system with Retrieval-Augmented Generation (RAG) capabilities and PDF processing to incorporate patient-specific data into responses. Key changes include:

- Added `PatientProfilePath` property to `LlmSettings` for specifying the patient profile PDF path.
- Updated `SystemPrompt` to improve tone and clarity for patient-focused responses.
- Introduced `PdfPig` library for PDF parsing and added methods to process and embed patient profile data in `LlamaSharpEngine`.
- Implemented semantic search to retrieve relevant context from patient data.
- Updated `StreamChatAsync` to include retrieved context in prompts.
- Refactored initialization and conversation reset logic for better maintainability.
- Improved code readability with comments and removed redundant code.

These changes improve contextual relevance, maintainability, and user experience.

--- a/FiatMedicaWPF/FiatMedicaWPF.csproj
+++ b/FiatMedicaWPF/FiatMedicaWPF.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="LLamaSharp" Version="0.25.0" />
     <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.25.0" />
+    <PackageReference Include="PdfPig" Version="0.1.11" />
   </ItemGroup>
 
 </Project>
